# siralim-ultimate-ocr

./: .gitignore  README.md  pyproject.toml  read.py  util.py
